--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>halfnote API Interface - {{ profile_user.username }}</title>
+    <title>halfnote API Testing Interface - {{ profile_user.username }}</title>
     <style>
         * {
             margin: 0;
