--- a/templates/activity.html
+++ b/templates/activity.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>halfnote API Interface - Activity Feed</title>
+    <title>halfnote API Testing Interface - Activity Feed</title>
     <style>
         * {
             margin: 0;
